<resources>
    <string name="app_name">MIPT_3</string>
    <string name="_0">0</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="m">M+</string>
    <string name="mminus">M-</string>
    <string name="rewind">←</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plusminus">±</string>
    <string name="sqt">√</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="inverse">1/x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
</resources>